--- a/style.css
+++ b/style.css
@@ -1,16 +1,16 @@
+
+
 .container {
     max-width: 400px;
     margin: 10vh auto 0 auto;
-    box-shadow: 0px 0px 43px 17px rgba(153,153,153,1);
+    background: linear-gradient(to right, rgb(11, 101, 219), rgb(5, 111, 138));
 }
 
 
 .bg_dark {
-    background: black;
-    color: rgb(255, 255, 255);
+    background: rgb(65, 64, 64);
+    color: white
 }
-
-
 
 .display {
     line-height: 80px;
@@ -18,6 +18,9 @@
     font-size: 25px;
     text-align: right;
     height: 80px;
+    border: 4px solid black;
+    color: white;
+    
 }
 
 .buttons {  
@@ -25,21 +28,35 @@
     border-bottom: 1px solid #999;
     border-left: 1px solid#999;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    border: 0.5px solid #999;
+    border: 4px solid black;
     line-height: 100px;
     text-align: center;
     font-size: 25px;
     cursor: pointer;
+    
 }
 
-.btn-number:hover,
-.btn-operator:hover,
-.btn-equal:hover, 
-.btn-clear:hover,
-.btn-dot:hover{
-    background: linear-gradient(to right, rgb(255, 153, 0),red);
+.btn-number:hover{
+    background: rgb(245, 85, 85);
     color: whitesmoke;
 }
+.btn-number,
+.btn-operator,
+.btn-equal,
+.btn-dot,
+.btn-clear{
+    color: white;
+}
+
+
+.btn-clear:hover,
+.btn-operator:hover,
+.btn-equal:hover,
+.btn-dot:hover{
+    background: rgb(245, 116, 69)
+    
+}
+    
 
 
 
